# paste-bin

./: .dev.vars.example  .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  components.json  config.yaml  deploy.sh  dev-server.ts  docker-compose.yml  fix_frontend.py  index.html  lightweight_context_saver.py  package-lock.json  package.json  schema.sql  seed.ts  setup.ps1  tailwind.config.ts  test-crypto.ts  tsconfig.app.json  vite-plugin-manifest.ts  vite.config.ts  wrangler.toml
.github/workflows/: docker.yml
functions/api/: ping.ts
functions/api/auth/: login.ts  logout.ts
functions/api/paste/: [slug].ts  index.ts
functions/lib/: auth.ts  slugs.ts
migrations/: 0001_initial.sql  0002_add_expires_at.sql
public/: manifest.json  sw.js
src/: App.tsx  index.css  main.tsx  sse-hub.ts  worker.ts
src-rust/: auth.rs  db.rs  expiry.rs  main.rs  slugs.rs  state.rs
src-rust/routes/: auth.rs  file.rs  mod.rs  paste.rs  ping.rs  stream.rs
src/components/: BurnRulesControl.tsx  CodePreview.tsx  ErrorState.tsx  ExpirationTimer.tsx  GhostIcon.tsx  Navbar.tsx  PasteCard.tsx  SharePasteDialog.tsx  ThemeProvider.tsx
src/components/ui/: animated-hourglass.tsx  animated-palette.tsx  animated-pin.tsx  animated-share.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  (+5 more)
src/hooks/: use-media-query.ts  useDynamicFavicon.ts
src/lib/: api.ts  auth.tsx  config.ts  constants.ts  crypto.ts  demoData.ts  demoPastes.ts  keyStore.ts  offlineCache.ts  offlineContext.tsx  utils.ts
src/pages/: EditPaste.tsx  Home.tsx  Login.tsx  NewPaste.tsx  ViewPaste.tsx
