[package]
name = "pastebin-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pastebin-server"
path = "src-rust/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
base64 = "0.22"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.32"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
